--- a/main.style.css
+++ b/main.style.css
@@ -1,5 +1,5 @@
-* {
-  box-sizing: border-box;
+body {
+  margin: 0;
 }
 a {
   text-decoration: none;
@@ -38,6 +38,10 @@ a {
   background-color: #f0f6ff;
   height: 953px;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 .main__description {
   font-family: Pretendard;
@@ -46,6 +50,9 @@ a {
   line-height: 80px;
   letter-spacing: 0px;
   text-align: center;
+}
+.media__br {
+  display: none;
 }
 .main--gradient {
   background: linear-gradient(91.26deg, #6d6afe 17.28%, #ff9f9f 74.98%);
@@ -93,7 +100,7 @@ a {
 .section.save {
   grid-template-areas: "des img";
 }
-.save__description {
+.description-section {
   grid-area: des;
   display: flex;
   flex-direction: column;
@@ -119,6 +126,7 @@ h2 {
   background-color: #f0f6ff;
 }
 .description {
+  grid-area: text;
   font-family: Abel;
   font-size: 16px;
   font-weight: 400;
@@ -141,12 +149,7 @@ h2 {
   color: transparent;
   background-clip: text;
 }
-.manage__description {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  grid-area: des;
-}
+
 .section.share {
   grid-template-areas: "des img";
 }
@@ -159,12 +162,7 @@ h2 {
   color: transparent;
   background-clip: text;
 }
-.share__description {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  grid-area: des;
-}
+
 .share__img {
   width: 570px;
   height: 450px;
@@ -181,12 +179,6 @@ h2 {
   grid-area: img;
 }
 
-.search__description {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  grid-area: des;
-}
 .search--gradient {
   background: linear-gradient(271.36deg, #fe578f -9.84%, #68e8f9 107.18%);
   color: transparent;
@@ -214,4 +206,64 @@ h2 {
 }
 .footer-main a {
   color: rgba(207, 207, 207, 1);
+}
+
+@media (max-width: 768px) {
+  .nav {
+    width: 100%;
+    height: 63px;
+    padding: 13px 32px;
+  }
+  .nav__bar {
+    height: 37px;
+  }
+  .login__link {
+    width: 80px;
+    padding: 10px 16px;
+  }
+  .main {
+    height: 399px;
+  }
+  .main__description {
+    font-family: Pretendard;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 42px;
+    letter-spacing: 0px;
+    text-align: center;
+    width: 300px;
+  }
+  .signup__link {
+    width: 200px;
+    height: 37px;
+    padding: 10px 16px;
+    margin: 0;
+    gap: 10px;
+    font-family: Pretendard;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+  .main__img-section {
+    width: 325px;
+    height: 160px;
+  }
+  .main__img {
+    width: 302.79px;
+    height: 178.71px;
+    top: 13.56px;
+    left: 11.1px;
+    border-radius: 25px;
+  }
+  .section,
+  .section.save,
+  .section.share {
+    grid-template: 2fr/1fr;
+    grid-template-areas:
+      "des"
+      "img";
+    text-align: center;
+  }
 }
