--- a/css/footer.css
+++ b/css/footer.css
@@ -20,10 +20,16 @@
   align-self: stretch;
 }
 
+/* .footer-element-link{
+  display: flex;
+  gap: 30px;
+  align-items: center;
+} */
+
 .footer-text{
   display: flex;
   gap: 30px;
-  font-family: Acme;
+  font-family: Arial;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -45,3 +51,27 @@
 
 }
 
+@media(max-width: 767px){
+  .footer-wrap{
+    height: 160px;
+    padding: 32px;
+  }
+
+  .footer-element{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: auto; /* 가로 갭을 20px로 설정합니다 */
+    grid-row-gap: 60px; 
+  }
+  #codeit-2023{
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .footer-icon{
+    justify-self: right;
+  }
+
+
+}
