--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@
 
 header{
   width: 100%;
-  padding: 20px 200px;
+  padding: 20px 200px; 
   position: fixed;
   display: flex; 
   justify-content: space-between;
@@ -12,6 +12,29 @@ header{
   background: #F0F6FF;
 }
 
-header button{
-  width: 128px;
+
+@media (max-width: 1199px){
+  header{
+    padding: 20px 32px;
+  }
+}
+ 
+@media(max-width: 767px){
+  header{
+    padding: 13px 32px;
+  }
+
+  header .logo{
+    height: 16px;
+  }
+
+  .btn-large {
+    width: 80px;
+    padding: 10px 16px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+  
 }
