--- a/css/landing.css
+++ b/css/landing.css
@@ -18,12 +18,20 @@
   gap: 40px;
 }
 
+.br-mobile{
+  display: none;
+}
+
 .top-section button{
   width: 350px;
 }
 
+.top-section img{
+  width: 1200px;
+}
+
 .middle-section{
-  margin: auto;
+  margin: auto; 
   padding: 120px 0 170px;
   text-align: left;
   display: flex;
@@ -38,7 +46,14 @@
   gap: 157px;
 }
 
+#middle-section-content-management,
+#middle-section-content-search{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 .middle-section-content-title{
+  width: 262px;
   display: flex;
   flex-direction: column;
   gap:10px;
@@ -85,6 +100,126 @@
   -webkit-background-clip: text;
 }
 
-h1 span{
+h1 span, h2 span{
   color: black;
+}
+
+@media(max-width: 1199px){
+
+  .top-section-title{
+    width: 698px;
+    gap: 40px;
+  }
+
+  .br-mobile{
+    display: inline;
+  }
+
+  .top-section img{
+    width: 698px;
+  }
+  
+
+  .middle-section-content{
+    gap: 51px;
+  }
+  
+  .middle-section img{
+    width: 385px;
+    height: 315px;
+  }
+ 
+}
+
+@media(max-width: 767px){
+
+  h1{
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 42px; 
+  }
+  
+  h2{
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  p{
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+  }
+
+  .top-section{
+    padding: 91px 32px 0;
+    width: 100%;
+  }
+
+  .top-section-title{
+    width: 100%;
+    gap: 24px;
+  }
+  
+  .top-section button{
+    width: 200px;
+    padding: 10px 16px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+  
+  .top-section img{
+    width: 100%;
+    height: auto; 
+  }
+  
+  .middle-section{
+    padding: 40px 32px 80px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+  }
+  
+  .middle-section-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+  
+  .middle-section-content-title{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+  }
+
+  #middle-section-content-wantlink,
+  #middle-section-content-management,
+  #middle-section-content-share,
+  #middle-section-content-search{
+    display: flex;
+    flex-direction: column;
+  }
+  
+  /* .middle-section h2{
+    order: 1;
+  }
+
+  .middle-section h5{
+    order: 3;
+  } */
+
+  .middle-section img{
+    width: 100%;
+    height: auto;
+    /* order: 2; */
+  }
+  
 }
