--- a/css/sign.css
+++ b/css/sign.css
@@ -112,3 +112,100 @@ input:focus {
   width: 42px;
   height: 42px;
 }
+
+@media(max-width: 767px){
+  h4{
+  font-size: 14px;
+  }
+
+  
+  section{
+    width: 100%;
+    display: flex;
+    justify-content: center; 
+    padding: 120px 32px;
+  }
+  
+  .signwrap{
+    width: 100%;
+    max-width : 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+  }
+  
+  .sing-form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+  
+  .sing-top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+  
+  .logo{
+    height: 38px;
+  }
+  
+  
+  form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+  
+  label{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+  
+  input{ 
+    width: 100%;
+    padding: 18px 15px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    border: 1px solid var(--Linkbrary-gray20, #CCD5E3);
+    background: var(--Linkbrary-white, #FFF);
+  }
+  
+  .signwrap a{
+    width: 100%;
+  }
+
+  .signwrap button{
+    width: 100%;
+  }
+  
+  .Social-login{
+    display: flex;
+    width: 100%;
+    padding: 12px 24px;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    border: 1px solid var(--Linkbrary-gray20, #CCD5E3);
+    background: var(--Linkbrary-gray10, #E7EFFB);
+  }
+  
+  .Social-login-img{
+    display: flex;
+    align-items: flex-start;
+    gap: 16px;
+  }
+  
+  .Social-login-img img{
+    width: 42px;
+    height: 42px;
+  }
+
+}
