--- a/Linkbrary/src/scss/pages/_home.scss
+++ b/Linkbrary/src/scss/pages/_home.scss
@@ -1,6 +1,6 @@
 @use "../base/global";
 @use "../components";
-@use "../abstracts";
+@use "../abstracts" as a;
 .add-favorite {
   background-color: transparent;
   position: absolute;
@@ -22,7 +22,7 @@
 }
 
 .container {
-  background-color: var(--white-color);
+  background-color: a.$white-color;
   display: flex;
   width: 998px;
   height: 450px;
@@ -52,14 +52,14 @@
   align-items: center;
   overflow: hidden;
   flex-shrink: 0;
-  background-color: var(--d1-gray-color);
+  background-color: a.$d1-gray-color;
   width: 55%;
   aspect-ratio: 55/45;
   border-radius: 15px;
 }
 
 .folder-add {
-  color: var(--primary-color);
+  color: a.$primary-color;
 }
 
 .folder-btn {
@@ -73,20 +73,20 @@
   justify-content: center;
   align-items: center;
   border-radius: 8px;
-  border: 1px solid var(--Linkbrary-gray20, #ccd5e3);
-  background: var(--white-color);
+  border: 1px solid a.$d3-gray-color;
+  background: a.$white-color;
 }
 
 .folder-input::placeholder {
-  color: var(--d4-gray-color);
+  color: a.$d4-gray-color;
   font-size: 1em;
   line-height: 1.5em;
 }
 
 .folder-change {
-  background-color: var(--white-color);
+  background-color: a.$white-color;
   border-radius: 15px;
-  border: 1px solid var(--d3-gray-color);
+  border: 1px solid a.$d3-gray-color;
   display: inline-flex;
   padding: 35px 40px;
   flex-direction: column;
@@ -98,7 +98,7 @@
 }
 
 .folder-name {
-  color: var(--d4-gray-color);
+  color: a.$d4-gray-color;
   text-align: center;
   font-size: 0.875em;
   font-style: normal;
@@ -129,7 +129,7 @@
 }
 
 .feature-description-section {
-  background-color: var(--white-color);
+  background-color: a.$white-color;
   margin: -120px 0 0;
   padding: 120px 0px;
   gap: 100px;
@@ -246,7 +246,7 @@
   aspect-ratio: 1118/659;
   border-radius: 25px;
   border-radius: 25px;
-  background: var(--white-color);
+  background: a.$white-color;
   z-index: -1;
   box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
   flex-direction: column;
@@ -283,7 +283,7 @@
 }
 
 .search-bar {
-  background-color: var(--grey-light-color);
+  background-color: a.$grey-light-color;
   border-radius: 10px;
   padding: 15px 16px;
 }
@@ -300,7 +300,7 @@
     rgba(255, 255, 255, 0) 48.72%,
     #000 128.17%
   );
-  background-color: var(--white-color);
+  background-color: a.$white-color;
   box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
   width: 619px;
   height: 584px;
@@ -317,7 +317,7 @@
   font-size: 1em;
   background-color: inherit;
   padding: 0 32px;
-  color: var(--grey-dark-color);
+  color: a.$grey-dark-color;
   border: none;
 }
 
@@ -327,16 +327,16 @@
 }
 
 .select-all-btn {
-  background-color: var(--primary-color);
-  color: var(--white-color);
+  background-color: a.$primary-color;
+  color: a.$white-color;
 }
 
 .select-favorite-btn {
-  border: 1px solid var(--primary-color);
+  border: 1px solid a.$primary-color;
 }
 
 .select-folder-btn {
-  border: 1px solid var(--primary-color);
+  border: 1px solid a.$primary-color;
 }
 
 .share-bg {
@@ -359,7 +359,7 @@
 }
 
 .share-link-btn a img:hover {
-  box-shadow: 0 0 10px var(--skyblue-color);
+  box-shadow: 0 0 10px a.$skyblue-color;
 }
 
 .share-link-logo {
@@ -382,7 +382,7 @@
 }
 
 .svg-change:hover {
-  fill: var(--primary-color);
+  fill: a.$primary-color;
 }
 
 .thumbnail {
