--- a/Linkbrary/src/scss/pages/_home.scss
+++ b/Linkbrary/src/scss/pages/_home.scss
@@ -34,18 +34,13 @@
 }
 
 .feature-description {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include a.flex(column, center, center);
   gap: 10px;
 }
 
 .feature-example-image {
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include a.flex(row, center, center);
   overflow: hidden;
   flex-shrink: 0;
   background-color: a.$d1-gray-color;
@@ -63,11 +58,9 @@
 }
 
 .folder-input {
-  display: flex;
   width: 280px;
   padding: 18px 15px;
-  justify-content: center;
-  align-items: center;
+  @include a.flex(row, center, center);
   border-radius: 8px;
   border: 1px solid a.$d3-gray-color;
   background: a.$white-color;
@@ -83,11 +76,8 @@
   background-color: a.$white-color;
   border-radius: 15px;
   border: 1px solid a.$d3-gray-color;
-  display: inline-flex;
   padding: 35px 40px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  @include a.flex(column, center, center);
   gap: 24px;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
   z-index: 1;
@@ -103,9 +93,7 @@
 }
 
 .folder-share {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include a.flex(column, flex-start, center);
   gap: 8px;
   width: 280px;
 }
@@ -119,8 +107,7 @@
 }
 
 .folder-share-link {
-  display: flex;
-  justify-content: space-between;
+  @include a.flex(row, space-between, stretch);
   gap: 32px;
 }
 
@@ -147,14 +134,12 @@
 }
 
 .link-list {
-  display: flex;
-  flex-direction: column;
+  @include a.flex(column, flex-start, stretch);
   gap: 20px;
 }
 
 .link-list-bar {
-  display: flex;
-  justify-content: space-between;
+  @include a.flex(row, space-between, stretch);
 }
 
 .link-cards {
@@ -188,8 +173,7 @@
 .page-sample {
   position: relative;
   width: 100%;
-  flex-direction: column;
-  align-items: center;
+  @include a.flex(column, flex-start, center);
 }
 
 .page-sample-content {
@@ -243,8 +227,7 @@
 }
 
 .search-box {
-  display: flex;
-  flex-direction: column;
+  @include a.flex(column, flex-start, stretch);
   position: absolute;
   top: 55px;
   left: 60px;
@@ -302,9 +285,7 @@
 }
 
 .share-link-btn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include a.flex(column, flex-start, center);
   gap: 10px;
 }
 
