--- a/Linkbrary/src/scss/components/_card.scss
+++ b/Linkbrary/src/scss/components/_card.scss
@@ -9,6 +9,10 @@
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
   @include a.flex(column, flex-start, stretch);
   overflow: visible;
+
+  @media (max-width: 1199px) {
+    font-size: 10px;
+  }
 }
 
 .card:hover {
