--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import "./global.css";
+@import './global.css';
 
 body {
   display: flex;
@@ -51,7 +51,7 @@ header {
   background-color: #edf7ff;
 }
 
-.hero-header {
+.hero-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -95,7 +95,7 @@ header {
   }
 }
 
-.cta-long {
+.cta--long {
   width: 20rem;
 
   @media (min-width: 768px) {
@@ -103,7 +103,7 @@ header {
   }
 }
 
-.slogan {
+.hero-container__title {
   width: 24rem;
   text-align: center;
   font-size: 3.2rem;
@@ -121,7 +121,7 @@ header {
   }
 }
 
-.slogan-gradient {
+.title-gradient {
   background-image: linear-gradient(119deg, var(--primary) 0%, #ff9f9f 100%);
 }
 
@@ -131,7 +131,7 @@ header {
   color: transparent;
 }
 
-.hero-image {
+.hero-container__image {
   width: 100%;
   height: fit-content;
   @media (min-width: 768px) {
@@ -181,16 +181,16 @@ section {
 
 section:nth-of-type(odd) {
   grid-template-areas:
-    "title"
-    "image"
-    "description";
+    'title'
+    'image'
+    'description';
 
   @media (min-width: 768px) {
     grid-template-areas:
-      ". image"
-      "title image"
-      "description image"
-      ". image";
+      '. image'
+      'title image'
+      'description image'
+      '. image';
     grid-template-columns: 26.2rem 38.5rem;
   }
 
@@ -201,16 +201,16 @@ section:nth-of-type(odd) {
 
 section:nth-of-type(even) {
   grid-template:
-    "title"
-    "image"
-    "description";
+    'title'
+    'image'
+    'description';
 
   @media (min-width: 768px) {
     grid-template-areas:
-      "image ."
-      "image title"
-      "image description"
-      "image .";
+      'image .'
+      'image title'
+      'image description'
+      'image .';
     grid-template-columns: 38.5rem 26.2rem;
   }
 
@@ -293,16 +293,16 @@ footer {
   display: grid;
   justify-content: space-between;
   grid-template:
-    "footer-links sns"
-    ". ." 1fr
-    "copyright .";
+    'footer-links sns'
+    '. .' 1fr
+    'copyright .';
   width: 100%;
   padding: 3.2rem;
 
   @media (min-width: 768px) {
     display: flex;
     justify-content: space-between;
-    grid-template: "copyright footer-links sns";
+    grid-template: 'copyright footer-links sns';
     height: fit-content;
     max-width: 192rem;
     padding: 3.2rem 10.4rem 0;
