--- a/css/form.css
+++ b/css/form.css
@@ -3,14 +3,6 @@
 @import url(./font.css);
 @import url(./zIndex.css);
 
-.min-width-350 {
-    min-width: 21.875rem;
-}
-
-.min-width-200 {
-    min-width: 12.5rem;
-}
-
 .width-full {
     width: 100%;
 }
@@ -26,6 +18,7 @@
 }
 
 .btn-form01 {
+    width: 21.875rem;
     font-size: 1.125rem;
     font-weight: 600;
     line-height: 1.193333333;
@@ -54,6 +47,10 @@
 
 .flex-box {
     display: flex;
+}
+
+.login-btn {
+    width: auto;
 }
 
 .input-login-form01 {
@@ -113,6 +110,10 @@
     display: none;
 }
 
+.login-form .login-button {
+    width: 100%;
+}
+
 .social-login {
     background: var(--grayColor200);
     border: 1px solid var(--grayColor300);
@@ -149,8 +150,13 @@
 
 @media (max-width: 767px) { /* 모바일 */
     .btn-form01 {
+        width: 12.5rem;
         padding: 0.65625rem 1.375rem;
         font-size: 14px;
         line-height: 1.19357142857;
+    }
+
+    .login-btn {
+        width: auto;
     }
 }
