--- a/Linkbrary/src/scss/layouts/_footer.scss
+++ b/Linkbrary/src/scss/layouts/_footer.scss
@@ -1,16 +1,8 @@
 @use "../abstracts" as a;
 footer {
-  background-color: var(--black-color);
+  background-color: a.$black-color;
   @include a.flex(column, flex-start, center);
   width: 100vw;
-}
-
-.copyright {
-  color: #676767;
-  text-align: center;
-  font-family: Abel;
-  font-size: 1em;
-  line-height: normal;
 }
 
 .footer-bar {
@@ -18,26 +10,36 @@ footer {
   max-width: 1920px;
   width: 100%;
   padding: 32px 104px 64px;
-}
 
-.policy-bar {
-  display: flex;
-  gap: 30px;
-  color: #cfcfcf;
-  font-family: Abel;
-  font-size: 1em;
-}
+  .copyright {
+    color: #676767;
+    font-family: Abel;
+    font-size: 1em;
+    line-height: normal;
+  }
 
-@media (max-width: 767px) {
-  .footer-bar {
+  .policy-bar {
+    display: flex;
+    gap: 30px;
+    color: #cfcfcf;
+    font-family: Abel;
+    font-size: 1em;
+  }
+
+  .info-link-bar ul {
+    display: flex;
+    gap: 12px;
+  }
+
+  @media (max-width: 767px) {
     display: grid;
     grid-template-columns: 181px 116px;
     column-gap: auto;
     row-gap: 60px;
     padding: 32px;
-  }
 
-  .copyright {
-    order: 1;
+    .copyright {
+      order: 1;
+    }
   }
 }
