--- a/week2/static/css/auth.css
+++ b/week2/static/css/auth.css
@@ -1,34 +1,33 @@
 body {
     background: var(--Linkbrary-bg);
-    padding: 23.8rem 0rem 25.3rem 0rem;/* 238px 0px 253px 0px; */
+    padding: 23.8rem 0rem 25.3rem 0rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* overflow: hidden; */
 }
 
 body.signup {
-    padding-bottom: 11.7rem; /* 117px; */
+    padding-bottom: 11.7rem;
 }
 
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1.6rem; /* 16px; */
+    gap: 1.6rem;
 }
 
 header object, header img {
-    width: 21rem; /* 210px; */
-    height: 3.8rem; /* 38px; */
+    width: 21rem;
+    height: 3.8rem;
 }
 
 header p {
     color: #000;
-    font-size: 1.6rem; /* 16px; */
+    font-size: 1.6rem;
     font-weight: 400;
-    line-height: 150%; /* 24px; */ /* 150% */
+    line-height: 150%;
 }
 
 header p a {
@@ -38,18 +37,18 @@ header p a {
     line-height: normal;
 }
 
-main {
+.wrap-input {
     display: flex;
     flex-direction: column;
-    gap: 2.4rem; /* 24px; */
-    margin-top: 3rem; /* 30px; */
-    margin-bottom: 3rem; /* 30px; */
+    gap: 2.4rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 .input-txt {
-    width: 40rem; /* 400px; */
-    padding: 1.8rem 1.5rem; /* 18px 15px; */
-    border-radius: 0.8rem; /* 8px; */
+    width: 40rem;
+    padding: 1.8rem 1.5rem;
+    border-radius: 0.8rem;
     border: 1px solid var(--Linkbrary-gray20);
     background: var(--Linkbrary-white);
 }
@@ -67,47 +66,60 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 1.2rem; /* 12px; */
+    gap: 1.2rem;
     position: relative;
 }
 
-.wrap-input p {
+.wrap-input label {
     color: #000;
-    font-size: 1.4rem; /* 14px; */
+    font-size: 1.4rem;
 }
 
-.eye-off {
+.eye {
     position: absolute;
-    bottom: 1.8rem; /* 18px; */
-    right: 1.5rem; /* 15px; */
+    top: 4.8rem;
+    right: 1.5rem;
+    cursor: pointer;
+    width: 1.6rem;
+    height: 1.6rem;
+}
+
+#passwordHidden {
+    position: absolute;
+    top: 4.8rem;
+    right: 1.5rem;
+    cursor: pointer;
+    width: 1.6rem;
+    height: 1.6rem;
+    opacity: 0;
 }
 
 footer {
-    margin-top: 3.2rem; /* 32px; */
+    margin-top: 3.2rem;
     display: flex;
-    width: 40rem; /* 400px; */
-    padding: 1.2rem 2.4rem; /* 12px 24px; */
+    width: 40rem;
+    padding: 1.2rem 2.4rem;
     justify-content: space-between;
     align-items: center;
-    border-radius: 0.8rem; /* 8px; */
+    border-radius: 0.8rem;
     border: 1px solid var(--Linkbrary-gray20);
     background: var(--Linkbrary-gray10);
 }
 
 footer p {
     color: var(--Linkbrary-gray100, #373740);
-    font-size: 1.4rem; /* 14px; */
+    font-size: 1.4rem;
 }
 
 .wrap-icon {
     display: flex;
     align-items: center;
-    gap: 1.6rem; /* 16px; */
+    gap: 1.6rem;
 }
 
 .social-login-icon {
-    width: 4.2rem; /* 42px; */
-    height: 4.2rem; /* 42px; */
+    width: 4.2rem;
+    height: 4.2rem;
 }
 
 .social-login-icon.google {
@@ -116,13 +128,14 @@ footer p {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.25);; /* 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
+    box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.25);
 }
 
 .txt-wrong {
+    /* display: none; */
     color: var(--Linkbrary-red);
-    font-size: 1.4rem; /* 14px; */
-    margin-top: -1.4rem; /* -14px; */ 
+    font-size: 1.4rem;
+    margin-top: -0.5rem;
 }
 
 @media screen and (max-width: 767px) {
