--- a/week2/static/css/button.css
+++ b/week2/static/css/button.css
@@ -4,27 +4,28 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem; /* 10px; */
-    padding: 1.6rem 2rem; /* 16px 20px; */
-    border-radius: 0.8rem; /* 8px; */
+    gap: 1rem;
+    padding: 1.6rem 2rem;
+    border-radius: 0.8rem;
     background: linear-gradient(91deg, var(--Linkbrary-primary-color) 0.12%, #6AE3FE 101.84%);
     border: none;
     color: var(--Grey-Light);
-    font-size: 1.8rem; /* 18px; */
+    font-size: 1.8rem;
+    line-height: 2.1rem;
     font-weight: 600;
     cursor: pointer;
 }
 
 .primary-btn.sm {
-    width: 12.8rem; /* 128px; */
+    width: 12.8rem;
 }
 
 .primary-btn.md {
-    width: 35rem; /* 350px; */
+    width: 35rem;
 }
 
 .primary-btn.lg {
-    width: 40rem; /* 400px; */
+    width: 40rem;
 }
 
 @media screen and (max-width: 767px) {
