--- a/week2/static/css/common.css
+++ b/week2/static/css/common.css
@@ -21,14 +21,11 @@
 }
 
 html {
-    /* 62.5% of 16px browser font size is 10px */
-    /* 16px * 0.625 = 10px */
     font-size: 62.5%;
 }
 
 body {
     font-family: 'Pretendard';
-    /* 1.6 * 10px = 16px */
     font-size: 1.6rem;
 }
 
@@ -43,4 +40,25 @@ object{
 a {
     cursor: pointer;
     text-decoration: none;
+}
+
+.active {
+    display: block;
+}
+
+.disable,
+.hide-br-pc {
+    display: none;
+}
+
+@media screen and (max-width: 1199px) {
+    .hide-br-pc {
+        display: inline;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .hide-br-mo {
+        display: none;
+    }
 }
