--- a/week2/static/css/main.css
+++ b/week2/static/css/main.css
@@ -4,7 +4,7 @@ header {
     left: 0;
     top: 0;
     width: 100%;
-    z-index: var(--z-top); /* 1000; */
+    z-index: var(--z-top);
     background-color: var(--Linkbrary-bg);
     padding: 2rem 20rem; 
 }
@@ -23,18 +23,13 @@ header {
     flex-direction: column;
     align-items: center;
 }
-.hide-br-pc {
-    display: none;
-}
 
 .content-01 {
     display: flex;
     width: 100%;
-    /* padding: 7rem 36rem 0rem 36rem; */
     flex-direction: column;
-    /* justify-content: flex-end; */
     align-items: center;
-    gap: 4rem; /* 40px; */
+    gap: 4rem;
     background-color: var(--Linkbrary-bg);
     margin-top: 8rem;
 }
@@ -42,9 +37,9 @@ header {
 .content-01 h1 {
     color: #000;
     text-align: center;
-    font-size: 6.4rem; /* 64px; */
+    font-size: 6.4rem;
     font-weight: 700;
-    line-height: 8rem; /* 80px;  */ /* 125% */
+    line-height: 8rem;
     white-space: nowrap;
 }
 
@@ -64,20 +59,16 @@ header {
 
 .contents {
     display: grid;
-    /* grid-template-columns: 29.1rem 55rem; */
     column-gap: 15.7rem;
     row-gap: 1rem;
     grid-template-areas: 
         "a c"
         "b c"
     ;
-    padding: 5rem 0rem; /* 50px 461px; */
-    /* justify-content: space-between;
-    align-items: center; */
+    padding: 5rem 0rem;
 }
 
 .contents.txt-right {
-    /* grid-template-columns: 55rem 29.1rem; */
     grid-template-areas: 
         "c a"
         "c b"
@@ -88,7 +79,7 @@ header {
     grid-area: a;
     align-self: end;
     width: 29.1rem;
-    font-size: 4.8rem; /* 48px; */
+    font-size: 4.8rem;
     font-weight: 700;
     letter-spacing: -0.3px;
     color: #000;
@@ -98,9 +89,9 @@ header {
     align-self: start;
     width: 29.1rem;
     color: #6B6B6B;
-    font-size: 1.6rem; /* 16px; */
+    font-size: 1.6rem;
     font-weight: 400;
-    line-height: 150%; /* 24px */
+    line-height: 150%;
     word-break: keep-all;
 }
 .contents img {
@@ -110,15 +101,15 @@ header {
 }
 
 .contents.content-02 {
-    padding-top: 12rem; /* 120px; */
+    padding-top: 12rem;
 }
 
 .contents .content-txt {
     display: flex;
-    width: 29.1rem; /* 291px; */
+    width: 29.1rem;
     flex-direction: column;
     align-items: flex-start;
-    gap: 1rem; /* 10px; */
+    gap: 1rem;
     flex-shrink: 0;
 }
 
@@ -153,8 +144,8 @@ header {
 /* footer */
 footer {
     display: flex;
-    height: 28rem; /* 280px; */
-    padding-top: 12rem; /* 120px; */
+    height: 28rem;
+    padding-top: 12rem;
     flex-direction: column;
     align-items: center;
     align-self: stretch;
@@ -162,8 +153,8 @@ footer {
 
 .wrap-footer {
     display: flex;
-    height: 16rem; /* 160px; */
-    padding: 3.2rem 10.4rem 6.4rem 10.4rem; /* 32px 104px 64px 104px; */
+    height: 16rem;
+    padding: 3.2rem 10.4rem 6.4rem 10.4rem;
     flex-direction: column;
     align-items: center;
     flex-shrink: 0;
@@ -176,7 +167,7 @@ footer {
     justify-content: space-between;
     align-items: flex-start;
     align-self: stretch;
-    font-size: 1.6rem; /* 16px; */
+    font-size: 1.6rem;
     font-weight: 400;
 }
 
@@ -186,9 +177,9 @@ footer {
 
 .inner-footer-center {
     display: flex;
-    width: 18.2rem; /* 182px; */
+    width: 18.2rem;
     align-items: flex-start;
-    gap: 3rem; /* 30px; */
+    gap: 3rem;
 }
 
 .inner-footer-center a{
@@ -197,7 +188,7 @@ footer {
 
 .inner-footer-right {
     display: flex;
-    gap: 1.2rem; /* 12px; */
+    gap: 1.2rem;
 }
 
 
@@ -211,17 +202,11 @@ footer {
         max-width: 79.9rem;
     }
 
-    .hide-br-pc {
-        display: inline;
-    }
-
     .contents {
         column-gap: 5rem;
-        /* grid-template-columns: 26.2rem 38.5rem; */
     }
     
     .contents.txt-right {
-        /* grid-template-columns: 38.5rem 26.2rem; */
         grid-template-areas: 
             "c a"
             "c b"
@@ -248,10 +233,6 @@ footer {
 
 
 @media screen and (max-width: 767px) {
-    .hide-br-mo {
-        display: none;
-    }
-
     .wrap-header {
         width: 100%
     }
