--- a/4th_week_mission/src/landing.css
+++ b/4th_week_mission/src/landing.css
@@ -268,29 +268,20 @@ footer {
   }
 
   .gnb {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
     height: 6.3rem;
-    max-width: 192rem;
-    padding: 0 3.2rem;
   }
 
   article {
-    padding-top: 0;
-    padding-bottom: 8rem;
-    padding-left: 3.2rem;
-    padding-right: 3.2rem;
+    padding: 0 3.2rem 8rem;
   }
 
   section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    row-gap: 1rem;
+    row-gap: 1.6rem;
     width: 100%;
-    height: 45.1rem;
+    height: fit-content;
     margin: 4rem 0; 
   }
 
@@ -304,7 +295,7 @@ footer {
 
   .title {
     font-size: 2.4rem;
-    line-height: 2.864rem;
+    line-height: 2.9rem;
   }
 
   .description {
