--- a/index.style.css
+++ b/index.style.css
@@ -9,7 +9,7 @@ a {
 .nav {
   width: 100%;
   height: 93px;
-  padding: 20px 200px 20px 200px;
+  padding: 20px 200px;
   background-color: #f0f6ff;
   position: sticky;
   top: 0;
@@ -56,7 +56,7 @@ a {
 .media__br {
   display: none;
 }
-.main--gradient {
+.main__description--highlight {
   background: linear-gradient(91.26deg, #6d6afe 17.28%, #ff9f9f 74.98%);
   color: transparent;
   background-clip: text;
@@ -72,7 +72,7 @@ a {
   display: flex;
   width: 350px;
   height: 53px;
-  padding: 16px, 20px, 16px, 20px;
+  padding: 16px 20px;
   border-radius: 8px;
   gap: 10px;
   justify-content: center;
