--- a/signin.css
+++ b/signin.css
@@ -83,19 +83,21 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 16px;
+  gap: 30px;
   width: 100%;
 }
 .input-section {
   width: 100%;
-  height: 89px;
+  height: 100px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 12px;
 }
-
+.error {
+  display: none;
+}
 .user-input {
   width: 100%;
   height: 60px;
