--- a/src/signin.css
+++ b/src/signin.css
@@ -2,18 +2,16 @@
 
 /*Mobile size*/
 @media (min-width: 375px) and (max-width: 767px) {
-  html {
-    width: 100%;
-    max-width: 40rem;
-    margin-top: 10rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
+  body {
+    padding: 10rem 0 0;
+  }
+  .sign-box {
+    width: 40rem;
   }
 }
 
 body {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+  padding: 18rem 0 0;
   background-color: var(--gray5);
   display: flex;
   flex-direction: column;
@@ -57,7 +55,8 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 40rem;
+  width: 100%;
+  max-width: 40rem;
   row-gap: 3.2rem;
 }
 
@@ -91,7 +90,7 @@ header {
 }
 
 #email,
-#password {
+.password-input {
   padding: 1.8rem 1.5rem;
   border-radius: 0.8rem;
   border: 0.1rem solid var(--gray4);
@@ -100,7 +99,7 @@ header {
 }
 
 #email:focus,
-#password:focus {
+.password-input:focus {
   border-color: var(--primary);
 }
 
