--- a/css/zIndex.css
+++ b/css/zIndex.css
@@ -1,7 +1,12 @@
 :root {
-    --zIndex1: 1;
-    --zIndex10: 10;
-    --zIndex50: 50;
-    --zIndex100: 100;
-    --zIndex1000: 1000;
+    --zindex-dropdown:                   1000;
+    --zindex-sticky:                     1020;
+    --zindex-fixed:                      1030;
+    --zindex-offcanvas-backdrop:         1040;
+    --zindex-offcanvas:                  1045;
+    --zindex-modal-backdrop:             1050;
+    --zindex-modal:                      1055;
+    --zindex-popover:                    1070;
+    --zindex-tooltip:                    1080;
+    --zindex-toast:                      1090;
 }
