--- a/components/FolderCards/index.module.css
+++ b/components/FolderCards/index.module.css
@@ -6,6 +6,10 @@
   border-radius: 10px;
 }
 
+.card :hover {
+  background-color: var(--gray10);
+}
+
 .card_txt_div_body {
   margin: 0.8rem 0;
   font-size: 1.2rem;
@@ -100,8 +104,7 @@
   text-align: center;
   padding: 0.7rem 0;
 }
-
-.isHovering {
+.options:hover {
   background-color: var(--gray10);
 }
 
