--- a/components/Folderdata/index.module.css
+++ b/components/Folderdata/index.module.css
@@ -17,3 +17,12 @@
   flex-direction: column;
   align-items: center;
 }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 24.4rem;
+  padding: 2rem 0 6rem;
+  background-color: var(--light-blue);
+}
