--- a/pages/signin/index.module.css
+++ b/pages/signin/index.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 238px 0 253px;
   background-color: var(--light-blue);
-  height: 100%;
+  height: 100vh;
 
   @media (max-width: 1200px) {
     padding: 200px 0 291px;
