--- a/styles/signin.module.scss
+++ b/styles/signin.module.scss
@@ -1,4 +1,4 @@
-body {
+.body {
   background-color: #f0f6ff;
   width: 100%;
   height: 982px;
@@ -39,8 +39,6 @@ body {
   align-items: center;
 }
 .logo-img {
-  width: 210px;
-  height: 38px;
   display: flex;
   align-items: center;
 }
@@ -50,7 +48,6 @@ body {
   height: 24px;
   flex-direction: row;
   align-items: flex-start;
-  /* justify-content: center; */
 }
 .question-text {
   font-family: Pretendard;
@@ -114,7 +111,7 @@ body {
   border: 1px solid rgba(204, 213, 227, 1);
   padding: 18px 15px;
 }
-i {
+.i {
   position: absolute;
   left: 90%;
   top: 50%;
@@ -127,7 +124,7 @@ i {
   border-color: blue;
   outline: none;
 }
-button {
+.button {
   cursor: pointer;
 }
 .signin {
